--- a/S01 - Bootcamp and Binary Classification/SLU09 - Classification with Logistic Regression/Exercise notebook.ipynb
+++ b/S01 - Bootcamp and Binary Classification/SLU09 - Classification with Logistic Regression/Exercise notebook.ipynb
@@ -138,7 +138,7 @@
     "    coefs_ = coefs[1:]\n",
     "    z= coef_0 + np.matmul(data, coefs_)\n",
     "    proba = 1/(1 + np.exp(-1*z))\n",
-    "    \n",
+    "        \n",
     "    return proba"
    ]
   },
@@ -345,6 +345,7 @@
     "    coefficients = np.zeros(n+1)\n",
     "    coefficients[0] = coefficients[0] +learning_rate* np.matmul(y_train - predict_proba(x_train, coefficients), np.ones(N))\n",
     "    coefficients[1:] = coefficients[1:] + learning_rate* np.matmul(y_train - predict_proba(x_train, coefficients), x_train)\n",
+    "\n",
     "    return coefficients"
    ]
   },
@@ -421,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 8,
    "id": "fa2acb21",
    "metadata": {
     "deletable": false,
@@ -462,16 +463,14 @@
     "    for feat_num in range(n+1):\n",
     "        nm_sum_elemnts = np.array([((y_train[idx] - p_xb[idx])/(x_value*p_xb[idx]*(1-p_xb[idx]))) for idx, x_value in enumerate(x_train_expanded[:,feat_num])])\n",
     "        coefficients[feat_num] = coefficients[feat_num]+np.sum(nm_sum_elemnts)*learning_rate\n",
-    "        \n",
-    "    # coefficients[0] = coefficients[0] +learning_rate* np.matmul(y_train - predict_proba(x_train, coefficients), np.ones(N))\n",
-    "    # coefficients[1:] = coefficients[1:] + learning_rate* np.matmul(y_train - predict_proba(x_train, coefficients), x_train)\n",
+    "\n",
     "    \n",
     "    return coefficients"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 9,
    "id": "49940f2e",
    "metadata": {
     "deletable": false,
@@ -544,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "eb924599",
    "metadata": {
     "deletable": false,
@@ -574,13 +573,14 @@
     "    \"\"\"\n",
     "   \n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    standardized_data = (data - np.mean(data, axis=0))/np.std(data, axis=0)\n",
+    "    \n",
     "    return standardized_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "87f815ed",
    "metadata": {
     "deletable": false,
@@ -594,7 +594,31 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before standardization:\n",
+      "[[ 7  7  3]\n",
+      " [ 2  2 11]\n",
+      " [ 9  5  2]\n",
+      " [ 0  9  5]\n",
+      " [10  1  3]\n",
+      " [ 1  5  2]]\n",
+      "\n",
+      "-------------------\n",
+      "\n",
+      "After standardization:\n",
+      "[[ 0.54498835  0.79262399 -0.42399915]\n",
+      " [-0.71267707 -1.03650829  2.11999576]\n",
+      " [ 1.04805452  0.06097108 -0.74199852]\n",
+      " [-1.21574324  1.5242769   0.21199958]\n",
+      " [ 1.29958761 -1.40233475 -0.42399915]\n",
+      " [-0.96421016  0.06097108 -0.74199852]]\n"
+     ]
+    }
+   ],
    "source": [
     "data = np.array([[7,7,3], [2,2,11], [9,5,2], [0,9,5], [10,1,3], [1,5,2]])\n",
     "standardized_data = standardize_data_function(data)\n",
@@ -607,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "c8098343",
    "metadata": {
     "deletable": false,
@@ -662,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "141d2651",
    "metadata": {
     "deletable": false,
@@ -676,7 +700,119 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Area</th>\n",
+       "      <th>MajorAxisLength</th>\n",
+       "      <th>MinorAxisLength</th>\n",
+       "      <th>Eccentricity</th>\n",
+       "      <th>ConvexArea</th>\n",
+       "      <th>Extent</th>\n",
+       "      <th>Perimeter</th>\n",
+       "      <th>Class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>87524</td>\n",
+       "      <td>442.246011</td>\n",
+       "      <td>253.291155</td>\n",
+       "      <td>0.819738</td>\n",
+       "      <td>90546</td>\n",
+       "      <td>0.758651</td>\n",
+       "      <td>1184.040</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>75166</td>\n",
+       "      <td>406.690687</td>\n",
+       "      <td>243.032436</td>\n",
+       "      <td>0.801805</td>\n",
+       "      <td>78789</td>\n",
+       "      <td>0.684130</td>\n",
+       "      <td>1121.786</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>90856</td>\n",
+       "      <td>442.267048</td>\n",
+       "      <td>266.328318</td>\n",
+       "      <td>0.798354</td>\n",
+       "      <td>93717</td>\n",
+       "      <td>0.637613</td>\n",
+       "      <td>1208.575</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>45928</td>\n",
+       "      <td>286.540559</td>\n",
+       "      <td>208.760042</td>\n",
+       "      <td>0.684989</td>\n",
+       "      <td>47336</td>\n",
+       "      <td>0.699599</td>\n",
+       "      <td>844.162</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>79408</td>\n",
+       "      <td>352.190770</td>\n",
+       "      <td>290.827533</td>\n",
+       "      <td>0.564011</td>\n",
+       "      <td>81463</td>\n",
+       "      <td>0.792772</td>\n",
+       "      <td>1073.251</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Area  MajorAxisLength  MinorAxisLength  Eccentricity  ConvexArea  \\\n",
+       "0  87524       442.246011       253.291155      0.819738       90546   \n",
+       "1  75166       406.690687       243.032436      0.801805       78789   \n",
+       "2  90856       442.267048       266.328318      0.798354       93717   \n",
+       "3  45928       286.540559       208.760042      0.684989       47336   \n",
+       "4  79408       352.190770       290.827533      0.564011       81463   \n",
+       "\n",
+       "     Extent  Perimeter  Class  \n",
+       "0  0.758651   1184.040   True  \n",
+       "1  0.684130   1121.786   True  \n",
+       "2  0.637613   1208.575   True  \n",
+       "3  0.699599    844.162   True  \n",
+       "4  0.792772   1073.251   True  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# We will load the dataset for you\n",
     "raisins = pd.read_csv('data/raisins_dataset.csv')\n",
@@ -711,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "7b4a5c71",
    "metadata": {
     "deletable": false,
@@ -745,14 +881,26 @@
     "    '''\n",
     "    \n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    return clf, probas, coefficients, intercept\n",
+    "    x_data, y_data = dataset.drop(columns=\"Class\").values, dataset[\"Class\"].values\n",
+    "\n",
+    "    std_caler = StandardScaler()\n",
+    "    x_data_stdz = std_caler.fit_transform(X=x_data)\n",
+    "    # x_data_stdz = standardize_data_function(x_data)\n",
+    "\n",
+    "    clf = LogisticRegression(max_iter=100, random_state=100)\n",
+    "    clf.fit(x_data_stdz, y=y_data)\n",
+    "\n",
+    "    probas = clf.predict_proba(x_data_stdz)\n",
+    "    coefficients = clf.coef_\n",
+    "    intercept = clf.intercept_\n",
+    "\n",
+    "    return clf, probas[:, clf.classes_==True], coefficients, intercept\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "24b36c05",
    "metadata": {
     "deletable": false,
@@ -781,6 +929,7 @@
     "np.testing.assert_almost_equal(round(probas.sum())*0.001, 0.450, 3), \"Something is wrong with your probabilities.\"\n",
     "\n",
     "# Testing Coefs\n",
+    "assert coef.shape==(1,7), 'Wrong number of coefficients. Did you select the features correctly?'\n",
     "np.testing.assert_almost_equal(round(coef.max(),3), 0.733, 2), \"Something is wrong with your model coefficients.\"\n",
     "np.testing.assert_almost_equal(round(coef.min(),3), -2.333, 2), \"Something is wrong with your model coefficients.\"\n",
     "np.testing.assert_almost_equal(round(coef.mean(),4), -0.4395, 3), \"Something is wrong with your model coefficients.\"\n",
@@ -978,6 +1127,7 @@
     "np.testing.assert_almost_equal(round(probas2.sum())*0.001, 0.450, 3), \"Something is wrong with your probabilities.\"\n",
     "\n",
     "# Testing Coefs\n",
+    "assert coef2.shape==(1,2), 'Wrong number of coefficients. Did you select the features correctly?'\n",
     "np.testing.assert_almost_equal(round(coef2.mean(),3), -1.465, 2), \"Something is wrong with your model coefficients.\"\n",
     "np.testing.assert_almost_equal(round(coef2.var(),5), 5.98857, 3), \"Something is wrong with your model coefficients.\"\n",
     "np.testing.assert_almost_equal(round(coef2.sum(),3), -2.931, 2), \"Something is wrong with your model coefficients.\"\n",
@@ -1240,19 +1390,20 @@
     "\n",
     "# Testing Probasa\n",
     "np.testing.assert_almost_equal(round(probas_can.max()), 1), \"Something is wrong with your probabilities.\"\n",
-    "np.testing.assert_almost_equal(round(probas_can.min(),5), 0.006,3), \"Something is wrong with your probabilities.\"\n",
+    "np.testing.assert_almost_equal(round(probas_can.min(),5), 0.00993,3), \"Something is wrong with your probabilities.\"\n",
     "np.testing.assert_almost_equal(round(probas_can.mean(),5), 0.46975, 3), \"Something is wrong with your probabilities.\"\n",
-    "np.testing.assert_almost_equal(round(probas_can.std(),5), 0.28087, 3), \"Something is wrong with your probabilities.\"\n",
+    "np.testing.assert_almost_equal(round(probas_can.std(),5), 0.27543, 3), \"Something is wrong with your probabilities.\"\n",
     "np.testing.assert_almost_equal(round(probas_can.sum())*0.001, 0.885, 3), \"Something is wrong with your probabilities.\"\n",
     "\n",
     "# Testing Coefs\n",
-    "np.testing.assert_almost_equal(round(coef_can.max(),3), 0.484, 2), \"Something is wrong with your model coefficients.\"\n",
-    "np.testing.assert_almost_equal(round(coef_can.min(),5), -0.8901, 2), \"Something is wrong with your model coefficients.\"\n",
-    "np.testing.assert_almost_equal(round(coef_can.mean(),3), -0.113, 2), \"Something is wrong with your model coefficients.\"\n",
-    "np.testing.assert_almost_equal(round(coef_can.var(),3), 0.213, 2), \"Something is wrong with your model coefficients.\"\n",
-    "np.testing.assert_almost_equal(round(coef_can.sum(),5), -0.90509, 3), \"Something is wrong with your model coefficients.\"\n",
+    "assert coef_can.shape==(1,7), 'Wrong number of coefficients. Did you select the features correctly?'\n",
+    "np.testing.assert_almost_equal(round(coef_can.max(),3), 0.477, 2), \"Something is wrong with your model coefficients.\"\n",
+    "np.testing.assert_almost_equal(round(coef_can.min(),5), -0.90780, 3), \"Something is wrong with your model coefficients.\"\n",
+    "np.testing.assert_almost_equal(round(coef_can.mean(),5), -0.08774, 3), \"Something is wrong with your model coefficients.\"\n",
+    "np.testing.assert_almost_equal(round(coef_can.var(),3), 0.251, 2), \"Something is wrong with your model coefficients.\"\n",
+    "np.testing.assert_almost_equal(round(coef_can.sum(),3), -0.614, 2), \"Something is wrong with your model coefficients.\"\n",
     "\n",
-    "assert hashlib.sha256(json.dumps(str(round(intercept_can[0],3))).encode()).hexdigest()=='814a53cf1b085b11d13b72d79dedfe3b0b0f65322cd9743284577ad571ae4473',\"Something is wrong with your intercept\""
+    "assert hashlib.sha256(json.dumps(str(round(intercept_can[0],3))).encode()).hexdigest()=='a3251684a60052de243146a079bd8615c090c8ba312602a6f99bad546bec8ba9',\"Something is wrong with your intercept\""
    ]
   },
   {
@@ -1336,13 +1487,14 @@
     "np.testing.assert_almost_equal(round(probas_can2.sum())*0.001, 0.885, 3), \"Something is wrong with your probabilities.\"\n",
     "\n",
     "# Testing Coefs\n",
+    "assert coef_can2.shape==(1,2), 'Wrong number of coefficients. Did you select the features correctly?'\n",
     "np.testing.assert_almost_equal(round(coef_can2.mean(),3), -0.773, 2), \"Something is wrong with your model coefficients.\"\n",
     "np.testing.assert_almost_equal(round(coef_can2.var(),5), 0.01275, 3), \"Something is wrong with your model coefficients.\"\n",
     "np.testing.assert_almost_equal(round(coef_can2.sum(),3), -1.547, 2), \"Something is wrong with your model coefficients.\"\n",
     "\n",
     "assert hashlib.sha256(json.dumps(str(round(intercept_can2[0],2))).encode()).hexdigest()=='2c166a03f5d797741a30f163766b3a052ec21f52c10c6fefbd5dc11912632748',\"Something is wrong with your intercept\"\n",
     "\n",
-    "correct1,correct2=utils.compare_classifiers(lr_can,lr_can2,cannabis.select_dtypes(include='number'),\n",
+    "correct1,correct2=utils.compare_classifiers(lr_can,lr_can2,cannabis.select_dtypes(include='number').drop(columns=['ID']),\n",
     "                          cannabis[['Oscore','SS']],cannabis.Cannabis)\n",
     "print(\"The 7-feature model classified %d out of %d subjects correctly.\" % (correct1,cannabis.shape[0]))\n",
     "print(\"The 2-feature model classified %d out of %d subjects correctly.\" % (correct2,cannabis.shape[0]))"
