--- a/S01 - Bootcamp and Binary Classification/SLU04 - Basic Stats with Pandas/Exercise notebook.ipynb
+++ b/S01 - Bootcamp and Binary Classification/SLU04 - Basic Stats with Pandas/Exercise notebook.ipynb
@@ -496,7 +496,7 @@
     "Let's have a look at the `pagesNumber` variable.\n",
     "\n",
     "- How many pages has the biggest book? What is its Id? What is its Title?\n",
-    "- How many pages has the smaller book? What is its Id? What is its Title?\n"
+    "- How many pages has the smallest book? What is its Id? What is its Title?\n"
    ]
   },
   {
@@ -588,11 +588,11 @@
     "assert title_biggest_book_hash == hashlib.sha256(bytes(title_biggest_book, \"utf-8\")).hexdigest(), \"Wrong answer.\"\\\n",
     "\"Please check the title of the biggest book.\"\n",
     "assert number_pages_smallest_book_hash == hashlib.sha256(bytes(number_pages_smallest_book)).hexdigest(), \"Wrong answer.\"\\\n",
-    "\"Please check the number of pages of the biggest book.\"\n",
+    "\"Please check the number of pages of the smallest book.\"\n",
     "assert id_smallest_book_hash == hashlib.sha256(bytes(id_smallest_book)).hexdigest(), \"Wrong answer.\"\\\n",
-    "\"Please check the id of the biggest book.\"\n",
+    "\"Please check the id of the smallest book.\"\n",
     "assert title_smallest_book_hash == hashlib.sha256(bytes(title_smallest_book, \"utf-8\")).hexdigest(), \"Wrong answer.\"\\\n",
-    "\"Please check the title of the biggest book.\""
+    "\"Please check the title of the smallest book.\""
    ]
   },
   {
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "7bc5d797",
    "metadata": {
     "deletable": false,
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "d11f7a38",
    "metadata": {
     "deletable": false,
@@ -702,7 +702,7 @@
    "source": [
     "max_rated_books_hash = \"3449ddf7ca912858ea7e87b19040bf7b9b529099f50d0f3c3388c6c79083ae0b\"\n",
     "\n",
-    "assert max_rated_books_hash == hashlib.sha256(bytes(max_rated_books)).hexdigest()"
+    "assert max_rated_books_hash == hashlib.sha256(bytes(max_rated_books)).hexdigest(), 'Not correct, try again.'"
    ]
   },
   {
@@ -744,13 +744,13 @@
     "\n",
     "Let's check the distribution of `Rating`.\n",
     "\n",
-    "- plot a histogram for the distribution of `PublishYear` with 20 bins\n",
+    "- plot a histogram for the distribution of `Rating` with 20 bins\n",
     "- check the skewness of the distribution (do you expect it to be positive or negative?)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "eea25c3d",
    "metadata": {
     "deletable": false,
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "7c15635d",
    "metadata": {
     "deletable": false,
@@ -868,12 +868,12 @@
    "source": [
     "# Exercise 5.2\n",
     "\n",
-    "Let's check now the kurtosis for the ploted distribution and compar with the normal distribution with the same characteristics"
+    "Let's now check the kurtosis for the plotted `Rating` distribution and compare it with a normal distribution with the same characteristics."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "32cad67a",
    "metadata": {
     "deletable": false,
@@ -894,7 +894,7 @@
        "<AxesSubplot:ylabel='Frequency'>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "971800cd",
    "metadata": {
     "deletable": false,
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "d4dfdf72",
    "metadata": {
     "deletable": false,
@@ -989,12 +989,12 @@
    "source": [
     "# Exercise 6\n",
     "\n",
-    "Find the value of the first, second, and third quartiles of the ploted distribution. Is the second quartile equal to the mean?"
+    "Find the value of the first, second, and third quartiles of the plotted `Rating` distribution. Find also the value of the mean. Is the second quartile equal to the mean?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "27795126",
    "metadata": {
     "deletable": false,
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "33be67e9",
    "metadata": {
     "deletable": false,
@@ -1108,36 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "9301347e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "count    57011.000000\n",
-       "mean       138.301819\n",
-       "std       1150.434280\n",
-       "min          0.000000\n",
-       "25%          0.000000\n",
-       "50%          4.000000\n",
-       "75%         31.000000\n",
-       "max      94850.000000\n",
-       "Name: CountsOfReview, dtype: float64"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.CountsOfReview.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "id": "e6df7cef",
    "metadata": {
     "deletable": false,
@@ -1182,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "id": "6c858f41",
    "metadata": {
     "deletable": false,
@@ -1246,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "id": "d2ac246d",
    "metadata": {
     "deletable": false,
@@ -1389,7 +1360,7 @@
        "131    3.67   325001537  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1414,12 +1385,12 @@
     }
    },
    "source": [
-    "There are several CountsOf Review with 0. To simplify for now, let's drop them."
+    "There are several `CountsOfReview` with 0. To simplify for now, let's drop them."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "id": "df6af666",
    "metadata": {
     "deletable": false,
@@ -1463,46 +1434,13 @@
     "- Obtain the mean and the median of the `CountsOfReview`; which one is greater?\n",
     "- Create a new column named `log_CountsOfReview` with the log of  `CountsOfReview`;\n",
     "- Obtain the mean and the median of the log of `CountsOfReview`; are they very different from each other?\n",
-    "- Plot log_fund_size using a histogram with 20 bins. Compare the results.\n",
+    "- Plot `log_CountsOfReview` using a histogram with 20 bins. Compare the results.\n",
     "- What do you think? Were the outliers dealt with?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "4f31a2a4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Id\n",
-       "2        10.301256\n",
-       "4         5.497168\n",
-       "5        10.521184\n",
-       "8         5.111988\n",
-       "9         0.000000\n",
-       "           ...    \n",
-       "99991     1.945910\n",
-       "99992     1.945910\n",
-       "99993     1.945910\n",
-       "99997     1.609438\n",
-       "99999     1.098612\n",
-       "Name: CountsOfReview, Length: 41904, dtype: float64"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.log(data_non_zero.CountsOfReview)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "id": "624c597b",
    "metadata": {
     "deletable": false,
@@ -1580,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
    "id": "d02223a3",
    "metadata": {
     "deletable": false,
@@ -1648,7 +1586,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.10 ('slu04')",
    "language": "python",
    "name": "python3"
   },
@@ -1692,6 +1630,11 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ab7837a785e463c091902cc1a487e0c0595906e85e67e832d3a8b29b192c0bd2"
+   }
   }
  },
  "nbformat": 4,
