--- a/S01 - Bootcamp and Binary Classification/SLU11 - Tree-Based Models/Exercise notebook.ipynb
+++ b/S01 - Bootcamp and Binary Classification/SLU11 - Tree-Based Models/Exercise notebook.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -178,16 +178,19 @@
    "source": [
     "def compute_probability(node):\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    n = node.shape[0]\n",
+    "    f = (node[\"Class\"] == 1).sum()\n",
     "\n",
-    "# single_node_gini = ...\n",
+    "    return f / n\n",
+    "\n",
+    "single_node_gini = gini(p=compute_probability(data[data[\"Humidity\"]==\"normal\"]))\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -810,7 +813,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.10 ('slu05')",
    "language": "python",
    "name": "python3"
   },
@@ -825,6 +828,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "9e08dc7a8551636f76550f4024519e9a26220ac4e0efb1a78a372cf047746b8c"
+   }
   }
  },
  "nbformat": 4,
