--- a/S01 - Bootcamp and Binary Classification/SLU11 - Tree-Based Models/Exercise notebook.ipynb
+++ b/S01 - Bootcamp and Binary Classification/SLU11 - Tree-Based Models/Exercise notebook.ipynb
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -250,13 +250,17 @@
     "\n",
     "\n",
     "def mean_impurity(data, feature_name):\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    feat_values = data[feature_name].unique()\n",
+    "    gini_values = []\n",
+    "    for feat_val in  feat_values:\n",
+    "        gini_values.append(gini(p=compute_probability(data[data[feature_name]==feat_val])))\n",
+    "    return mean(gini_values)\n",
+    "    # raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -328,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -339,7 +343,18 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeClassifier(criterion='entropy', random_state=101)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "exercise_data = make_exercise_data()\n",
     "X, y = separate_target_variable(exercise_data)\n",
@@ -347,18 +362,21 @@
     "\n",
     "# Import the model\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "from random import random\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "# raise NotImplementedError()\n",
     "\n",
     "\n",
     "# Instantiate the model with random_state=101, and assign it to variable \"model\". Then fit it to the data\n",
-    "# model = ...\n",
+    "model = DecisionTreeClassifier(random_state=101, criterion=\"entropy\")\n",
+    "model.fit(X, y)\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -397,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -410,7 +428,22 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "InvocationException",
+     "evalue": "GraphViz's executables not found",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mInvocationException\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/home/jrr/batch6-workspace/S01 - Bootcamp and Binary Classification/SLU11 - Tree-Based Models/Exercise notebook.ipynb Cell 17\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S01%20-%20Bootcamp%20and%20Binary%20Classification/SLU11%20-%20Tree-Based%20Models/Exercise%20notebook.ipynb#X22sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m tree \u001b[39m=\u001b[39m visualize_tree(model, X\u001b[39m.\u001b[39mcolumns, [\u001b[39m\"\u001b[39m\u001b[39mnegative_class\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mpositive_class\u001b[39m\u001b[39m\"\u001b[39m])\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S01%20-%20Bootcamp%20and%20Binary%20Classification/SLU11%20-%20Tree-Based%20Models/Exercise%20notebook.ipynb#X22sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m Image(tree)\n",
+      "File \u001b[0;32m~/batch6-workspace/S01 - Bootcamp and Binary Classification/SLU11 - Tree-Based Models/utils/utils.py:174\u001b[0m, in \u001b[0;36mvisualize_tree\u001b[0;34m(clf, feature_names, class_names)\u001b[0m\n\u001b[1;32m    166\u001b[0m dot_data \u001b[39m=\u001b[39m export_graphviz(\n\u001b[1;32m    167\u001b[0m     clf,\n\u001b[1;32m    168\u001b[0m     out_file\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m,\n\u001b[1;32m    169\u001b[0m     feature_names\u001b[39m=\u001b[39mfeature_names,\n\u001b[1;32m    170\u001b[0m     class_names\u001b[39m=\u001b[39mclass_names,\n\u001b[1;32m    171\u001b[0m )\n\u001b[1;32m    173\u001b[0m graph \u001b[39m=\u001b[39m pydotplus\u001b[39m.\u001b[39mgraph_from_dot_data(dot_data)\n\u001b[0;32m--> 174\u001b[0m \u001b[39mreturn\u001b[39;00m graph\u001b[39m.\u001b[39;49mcreate_png()\n",
+      "File \u001b[0;32m~/.virtualenvs/slu05/lib/python3.8/site-packages/pydotplus/graphviz.py:1797\u001b[0m, in \u001b[0;36mDot.__init__.<locals>.<lambda>\u001b[0;34m(f, prog)\u001b[0m\n\u001b[1;32m   1792\u001b[0m \u001b[39m# Automatically creates all the methods enabling the creation\u001b[39;00m\n\u001b[1;32m   1793\u001b[0m \u001b[39m# of output in any of the supported formats.\u001b[39;00m\n\u001b[1;32m   1794\u001b[0m \u001b[39mfor\u001b[39;00m frmt \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mformats:\n\u001b[1;32m   1795\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__setattr__\u001b[39m(\n\u001b[1;32m   1796\u001b[0m         \u001b[39m'\u001b[39m\u001b[39mcreate_\u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m frmt,\n\u001b[0;32m-> 1797\u001b[0m         \u001b[39mlambda\u001b[39;00m f\u001b[39m=\u001b[39mfrmt, prog\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mprog: \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcreate(\u001b[39mformat\u001b[39;49m\u001b[39m=\u001b[39;49mf, prog\u001b[39m=\u001b[39;49mprog)\n\u001b[1;32m   1798\u001b[0m     )\n\u001b[1;32m   1799\u001b[0m     f \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__dict__\u001b[39m[\u001b[39m'\u001b[39m\u001b[39mcreate_\u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m frmt]\n\u001b[1;32m   1800\u001b[0m     f\u001b[39m.\u001b[39m\u001b[39m__doc__\u001b[39m \u001b[39m=\u001b[39m (\n\u001b[1;32m   1801\u001b[0m         \u001b[39m'''Refer to the docstring accompanying the'''\u001b[39;00m\n\u001b[1;32m   1802\u001b[0m         \u001b[39m''''create' method for more information.'''\u001b[39;00m\n\u001b[1;32m   1803\u001b[0m     )\n",
+      "File \u001b[0;32m~/.virtualenvs/slu05/lib/python3.8/site-packages/pydotplus/graphviz.py:1959\u001b[0m, in \u001b[0;36mDot.create\u001b[0;34m(self, prog, format)\u001b[0m\n\u001b[1;32m   1957\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mprogs \u001b[39m=\u001b[39m find_graphviz()\n\u001b[1;32m   1958\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mprogs \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m-> 1959\u001b[0m         \u001b[39mraise\u001b[39;00m InvocationException(\n\u001b[1;32m   1960\u001b[0m             \u001b[39m'\u001b[39m\u001b[39mGraphViz\u001b[39m\u001b[39m\\'\u001b[39;00m\u001b[39ms executables not found\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m   1962\u001b[0m \u001b[39mif\u001b[39;00m prog \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mprogs:\n\u001b[1;32m   1963\u001b[0m     \u001b[39mraise\u001b[39;00m InvocationException(\n\u001b[1;32m   1964\u001b[0m         \u001b[39m'\u001b[39m\u001b[39mGraphViz\u001b[39m\u001b[39m\\'\u001b[39;00m\u001b[39ms executable \u001b[39m\u001b[39m\"\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m not found\u001b[39m\u001b[39m'\u001b[39m \u001b[39m%\u001b[39m prog)\n",
+      "\u001b[0;31mInvocationException\u001b[0m: GraphViz's executables not found"
+     ]
+    }
+   ],
    "source": [
     "tree = visualize_tree(model, X.columns, [\"negative_class\", \"positive_class\"])\n",
     "Image(tree)"
