--- a/S01 - Bootcamp and Binary Classification/SLU12 - Feature Engineering/Exercise notebook.ipynb
+++ b/S01 - Bootcamp and Binary Classification/SLU12 - Feature Engineering/Exercise notebook.ipynb
@@ -944,7 +944,271 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Restaurant Name</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Cuisines</th>\n",
+       "      <th>Average Cost for two</th>\n",
+       "      <th>Has Table booking</th>\n",
+       "      <th>Has Online delivery</th>\n",
+       "      <th>Price range</th>\n",
+       "      <th>Aggregate rating</th>\n",
+       "      <th>Rating color</th>\n",
+       "      <th>Rating text</th>\n",
+       "      <th>Votes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Jahanpanah</td>\n",
+       "      <td>Agra</td>\n",
+       "      <td>North Indian, Mughlai</td>\n",
+       "      <td>850</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>Yellow</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>140</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Rangrezz Restaurant</td>\n",
+       "      <td>Agra</td>\n",
+       "      <td>North Indian, Mughlai</td>\n",
+       "      <td>700</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>Yellow</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Time2Eat - Mama Chicken</td>\n",
+       "      <td>Agra</td>\n",
+       "      <td>North Indian</td>\n",
+       "      <td>500</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>Yellow</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Chokho Jeeman Marwari Jain Bhojanalya</td>\n",
+       "      <td>Agra</td>\n",
+       "      <td>Rajasthani</td>\n",
+       "      <td>400</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Green</td>\n",
+       "      <td>Very Good</td>\n",
+       "      <td>87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Pinch Of Spice</td>\n",
+       "      <td>Agra</td>\n",
+       "      <td>North Indian, Chinese, Mughlai</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>Green</td>\n",
+       "      <td>Very Good</td>\n",
+       "      <td>177</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8647</th>\n",
+       "      <td>D Cabana</td>\n",
+       "      <td>Vizag</td>\n",
+       "      <td>Continental, Seafood, Chinese, North Indian, B...</td>\n",
+       "      <td>600</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>Yellow</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>193</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8648</th>\n",
+       "      <td>Kaloreez</td>\n",
+       "      <td>Vizag</td>\n",
+       "      <td>Cafe, North Indian, Chinese</td>\n",
+       "      <td>400</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>Yellow</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8649</th>\n",
+       "      <td>Plot 17</td>\n",
+       "      <td>Vizag</td>\n",
+       "      <td>Burger, Pizza, Biryani</td>\n",
+       "      <td>600</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>Green</td>\n",
+       "      <td>Very Good</td>\n",
+       "      <td>172</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8650</th>\n",
+       "      <td>Vista - The Park</td>\n",
+       "      <td>Vizag</td>\n",
+       "      <td>American, North Indian, Thai, Continental</td>\n",
+       "      <td>1500</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>Yellow</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8651</th>\n",
+       "      <td>Flying Spaghetti Monster</td>\n",
+       "      <td>Vizag</td>\n",
+       "      <td>Italian</td>\n",
+       "      <td>1400</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>Green</td>\n",
+       "      <td>Very Good</td>\n",
+       "      <td>316</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8652 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            Restaurant Name   City  \\\n",
+       "0                                Jahanpanah   Agra   \n",
+       "1                       Rangrezz Restaurant   Agra   \n",
+       "2                   Time2Eat - Mama Chicken   Agra   \n",
+       "3     Chokho Jeeman Marwari Jain Bhojanalya   Agra   \n",
+       "4                            Pinch Of Spice   Agra   \n",
+       "...                                     ...    ...   \n",
+       "8647                               D Cabana  Vizag   \n",
+       "8648                               Kaloreez  Vizag   \n",
+       "8649                                Plot 17  Vizag   \n",
+       "8650                       Vista - The Park  Vizag   \n",
+       "8651               Flying Spaghetti Monster  Vizag   \n",
+       "\n",
+       "                                               Cuisines  Average Cost for two  \\\n",
+       "0                                 North Indian, Mughlai                   850   \n",
+       "1                                 North Indian, Mughlai                   700   \n",
+       "2                                          North Indian                   500   \n",
+       "3                                            Rajasthani                   400   \n",
+       "4                        North Indian, Chinese, Mughlai                  1000   \n",
+       "...                                                 ...                   ...   \n",
+       "8647  Continental, Seafood, Chinese, North Indian, B...                   600   \n",
+       "8648                        Cafe, North Indian, Chinese                   400   \n",
+       "8649                             Burger, Pizza, Biryani                   600   \n",
+       "8650          American, North Indian, Thai, Continental                  1500   \n",
+       "8651                                            Italian                  1400   \n",
+       "\n",
+       "     Has Table booking Has Online delivery  Price range  Aggregate rating  \\\n",
+       "0                   No                  No            3               3.9   \n",
+       "1                   No                  No            2               3.5   \n",
+       "2                   No                  No            2               3.6   \n",
+       "3                   No                  No            2               4.0   \n",
+       "4                   No                  No            3               4.2   \n",
+       "...                ...                 ...          ...               ...   \n",
+       "8647                No                  No            2               3.6   \n",
+       "8648                No                  No            2               3.7   \n",
+       "8649                No                  No            2               4.3   \n",
+       "8650                No                  No            4               3.8   \n",
+       "8651                No                  No            3               4.4   \n",
+       "\n",
+       "     Rating color Rating text  Votes  \n",
+       "0          Yellow        Good    140  \n",
+       "1          Yellow        Good     71  \n",
+       "2          Yellow        Good     94  \n",
+       "3           Green   Very Good     87  \n",
+       "4           Green   Very Good    177  \n",
+       "...           ...         ...    ...  \n",
+       "8647       Yellow        Good    193  \n",
+       "8648       Yellow        Good     85  \n",
+       "8649        Green   Very Good    172  \n",
+       "8650       Yellow        Good     74  \n",
+       "8651        Green   Very Good    316  \n",
+       "\n",
+       "[8652 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -957,13 +1221,17 @@
    },
    "outputs": [],
    "source": [
-    "def encode_rating_text(X):\n",
+    "def encode_rating_text(X:pd.DataFrame) -> pd.DataFrame:\n",
     "\n",
     "    X_r = X.copy()\n",
     "    \n",
     "    # create new column using suitable transformer\n",
     "    # YOUR CODE HERE\n",
-    "    \n",
+    "    ordinalencoder = ce.ordinal.OrdinalEncoder()\n",
+    "\n",
+    "    ordinalencoder.fit(X_r[\"Rating text\"])\n",
+    "\n",
+    "    X_r[\"rating_text_encoded\"] = ordinalencoder.transform(X_r[\"Rating text\"])\n",
     "    # raise NotImplementedError()\n",
     "    \n",
     "    return X_r"
@@ -971,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1021,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1034,20 +1302,27 @@
    },
    "outputs": [],
    "source": [
-    "def encode_cuisines(X):\n",
+    "def encode_cuisines(X:pd.DataFrame) -> pd.DataFrame:\n",
     "\n",
     "    X_t = X.copy()\n",
     "    \n",
     "    # perform one-hot encoding in X_t\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    \n",
+    "    onehotencoder = ce.one_hot.OneHotEncoder(use_cat_names=True, handle_unknown='indicator')\n",
+    "\n",
+    "    onehotencoder.fit(X_t[\"Cuisines\"])\n",
+    "\n",
+    "    X_t_ohe = onehotencoder.transform(X_t[\"Cuisines\"])   \n",
+    "    # raise NotImplementedError()\n",
+    "    X_t = pd.concat([X_t.drop(columns=\"Cuisines\"), X_t_ohe], axis=1)\n",
     "    \n",
     "    return X_t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "deletable": false,
     "editable": false,
