--- a/S01 - Bootcamp and Binary Classification/SLU15 - Hyperparameter Tuning/Exercise notebook.ipynb
+++ b/S01 - Bootcamp and Binary Classification/SLU15 - Hyperparameter Tuning/Exercise notebook.ipynb
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -431,7 +431,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -933,14 +933,21 @@
     "#- penalty  \"l2\", \"l1\" or \"elasticnet\"\n",
     "# assign it to random_grid\n",
     "# random_grid = ...\n",
+    "from scipy.stats import randint\n",
+    "\n",
+    "\n",
+    "random_grid = {\n",
+    "    \"C\": randint(0.1, 10),\n",
+    "    \"penalty\": [\"l1\", \"l2\", \"elasticnet\"], \n",
+    "    }\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -990,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1020,12 +1027,15 @@
     "# random_search = ...\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "\n",
+    "random_search = RandomizedSearchCV(estimator=linear_model.LogisticRegression(), param_distributions=random_grid, scoring=\"roc_auc\", n_iter=15, random_state=42)\n",
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1075,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1101,12 +1111,34 @@
     "# rs_best_model = ...\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "random_search.fit(X_train, y_train)\n",
+    "rs_best_model = random_search.best_estimator_\n",
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=1)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rs_best_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1122,7 +1154,19 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "Your parameters are not correct",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_18779/3178871211.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mrs_best_model_hash\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0;34m'c2fbca42369c6609159487a711fb011cf55e626ed986aef10f6a0326c31b23ca'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrs_best_model\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinear_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLogisticRegression\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0;34m'Make sure you are using the right model'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mrs_best_model_hash\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0msha256\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdumps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrs_best_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_params\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhexdigest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Your parameters are not correct'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m: Your parameters are not correct"
+     ]
+    }
+   ],
    "source": [
     "rs_best_model_hash ='c2fbca42369c6609159487a711fb011cf55e626ed986aef10f6a0326c31b23ca'\n",
     "assert isinstance(rs_best_model, sklearn.linear_model.LogisticRegression) , 'Make sure you are using the right model'\n",
